Working version of the panel
 * Panel works and can display a JPG
 * Touch part works, but no interrupts yet

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,16 @@
-idf_component_register(SRCS "esp32-2432S032C_I-base.c"
-                    INCLUDE_DIRS ".")
+#
+# SPDX-FileCopyrightText: 2025 Hugo Trippaers
+#
+# SPDX-License-Identifier: Apache-2.0
+#
+
+idf_component_register(
+        SRCS
+          "esp32-2432S032C_I-base.c"
+          "pretty_effect.c"
+          "decode_image.c"
+        INCLUDE_DIRS
+          "."
+        EMBED_FILES
+          "image.jpg"
+)
